finish basic easy rpc